static/css/dashboard/cart.css
.dashboard-cart {
    margin-top: 20px;
}

.dashboard-cart .dashboard-cart-item {
    padding-top: 15px;
    padding-left: 18px;
    border-bottom: 1px solid #F2F2F2;
    position: relative;
}

.dashboard-cart .dashboard-cart-item .dashboard-cart-item-image {
    width: 100px;
    height: 100px;
    display: inline-block;
}

/* arrow part */
.dashboard-cart .dashboard-cart-item .dashboard-cart-item-image img {
    width:13px;
    height:13px;
}

.dashboard-cart .dashboard-cart-item .dashboard-cart-item-title {
    display: inline-block;
    margin-left: 30px;
    vertical-align: top;
    margin-top: 10px;
    width: 300px;
    overflow:hidden;
}

.dashboard-cart .dashboard-cart-item .dashboard-cart-item-title h3 {
    font-size: 16px;
    font-weight: 700;
    margin-bottom: 10px;
}

.dashboard-cart .dashboard-cart-item .dashboard-cart-item-meta {
    display: inline-block;
    font-size: 14px;
    font-weight: 400;
    width:85%;
}

.dashboard-cart .dashboard-cart-item .dashboard-cart-item-meta #cart-updated {
    font-weight: 100;
    margin-left: 15px;
}

.dashboard-cart .dashboard-cart-item .dashboard-cart-item-seller {
    display: inline-block;
    right: 60px;
    margin-left:2%;
    margin-top: 35px;
    vertical-align: top;
    text-align: center;
    font-size: 14px;
    color: rgba(0, 0, 0, .5);
}

.dashboard-cart .dashboard-cart-item .dashboard-cart-item-seller p{
    font-size:16px;
}

.dashboard-cart .dashboard-cart-item .dashboard-cart-item-seller button {
    width:75px;
    height:33px;
    margin-top: 5px;
    font-size: 12px;
    background: #898989;
    border: 1px solid #898989;
    color: white;
}

.dashboard-cart .dashboard-cart-item .dashboard-cart-item-more {
    position: absolute;
    right: 0;
    top: 40px;
}

.dashboard-cart .dashboard-cart-item .dashboard-cart-item-more i {
    font-size: 20px;
    color: white;
    border-radius: 2px;
    background: #648efc;
    height: 20px;
    width: 20px;
    line-height: 23px;
    text-align: center;
    padding-bottom: 3px;
    padding-right: 2px;
    padding-left: 2px;
    cursor: pointer;
}

.dashboard-cart .dashboard-cart-item .dashboard-cart-item-popup {
    border: 1px solid rgba(0, 0, 0, .2);
    text-align: right;
    padding: 15px;
    margin-top: 12px;
    display: none;
}

.dashboard-cart .dashboard-cart-item .dashboard-cart-item-popup li {
    display: inline-block;
    padding-right: 30px;
    width: 50px;
    padding-left: 30px;
    font-size: 14px;
    color: rgba(0, 0, 0, .5);
    cursor: pointer;
}

.dashboard-cart .dashboard-cart-item .dashboard-cart-item-popup li input {
    display: inline-block;
    background: transparent;
    font-size: 14px;
    color: rgba(0, 0, 0, .5);
    cursor: pointer;
}

.dashboard-cart .dashboard-cart-item .dashboard-cart-item-popup #popup-buy {
    border-right: 1px solid rgba(0, 0, 0, .2);
}

.dashboard-cart-total {
    margin-top: 45px;
    height: 120px;
    position: relative;
    border: 1px solid rgba(0, 0, 0, .2);
}

.dashboard-cart-total .dashboard-cart-bill {
    width: 352px;
    height: 186px;
    padding-left: 18px;
    padding-top: 15px;
    border-right: 1px solid rgba(0, 0, 0, .2);
    font-size: 14px;
}

.dashboard-cart-total .dashboard-cart-subtotal {
    padding-right: 22px;
    padding-bottom: 15px;
    text-align: right;
    font-size: 18px;
    font-weight: 700;
    color: rgba(0, 0, 0, .6);
    position: absolute;
    right: 0;
    bottom: 0;
}

.dashboard-cart-total .dashboard-cart-subtotal h1 {
    margin-top: 5px;
    font-size: 38px;
    letter-spacing: -.05em;
}

.dashboard-cart-total .dashboard-cart-subtotal h1 #unit {
    font-size: 16px;
    margin-left: 5px;
}

.dashboard-cart-purchase {
    margin-top: 35px;
    text-align: center;
}

.dashboard-cart-purchase #purchase {
    background: #648efc;
    color: white;
    font-size: 14px;
    font-weight: 600;
    border-radius: 5px;
    padding: 12px 40px 12px 40px;
}

.dashboard-cart-item-meta .cart-item {
    margin-bottom: 5px;
}

.dashboard-cart-item-meta .cart-item form {
    display: inline;
}

.dashboard-cart-item-meta .cart-item button {
    background: transparent;
}

.dashboard-cart-item-meta .cart-item button i {
    color: #648efc;
}

.no-list {
    text-align: center;
    color: #648efc;
    font-weight: 600;
    font-size: 14px;
    margin-top: 70px;
    padding-bottom: 30px;
}

/* gauge part */
/* social gauge part */
#circle{
	position:relative;
  height:45px;
  width:90px;
  border-radius: 90px 90px 0 0;
  -moz-border-radius: 90px 90px 0 0;
  -webkit-border-radius: 90px 90px 0 0;
  background:green;
}

.circle-wrapper{
	width:110%;
	height:100%;
	/*background-color:grey;*/
}
/* arrow for 1 */
/*
#arrow{
	position:relative;
	left:30;
	top:90;
	transform: rotate(15deg);
}
*/
/* arrow for 2 */
/*
#arrow{
	position:relative;
	left:21%;
	top:30;
	transform: rotate(45deg);
}
*/
/* arrow for 3 */
/*
#arrow{
	position:relative;
	left:45%;
	top:0;
	transform: rotate(90deg);
}
*/
/* arrow for 4 */
/*
#arrow{
	position:relative;
	left:70%;
	top:30;
	transform: rotate(135deg);
}
*/
/* arrow for 5 */
/*
.circle-arrow{
	position:relative;
	left:10%;
	top:3.5em;
	transform: rotate(160deg);
}
*/
/* default arrow */

.circle-arrow{
	position:relative;
    display: inherit;
	left:0;
	top:0;
	/*transform: rotate(160deg);*/
}
/*
*/
/* ul tag circle */
.circle {
  position: relative;
  /*border: 1px solid black;*/
  padding: 0;
  /*margin: 1em auto;*/
  /*margin: 1em 1em 0 3em;*/
	margin-left:3%;
  width: 100px;
  height: 50px;
  border-radius: 100px 100px 0 0;
  list-style: none;
  overflow: hidden;
}
.circle-list {
  overflow: hidden;
  position: absolute;
  top: 0;
  right: 0;
  width: 50px;
  height: 50px;
  transform-origin: 0% 100%;
}
.circle-text {
  position: absolute;
  left: -100%;
  width: 100px;
  height: 100px;
  text-align: center;
  transform: skewY(36deg) rotate(18deg);
  padding-top: 4%;
  border-radius: 90px 90px 0 0;
  -moz-border-radius: 90px 90px 0 0;
  -webkit-border-radius: 90px 90px 0 0;
    font-size:12px;
}
.circle-list:first-child {
  transform: rotate(270deg) skewY(-36deg);
}
.circle-list:nth-child(2) {
  transform: rotate(306deg) skewY(-36deg);
}
.circle-list:nth-child(3) {
  transform: rotate(342deg) skewY(-36deg);
}
.circle-list:nth-child(4) {
  transform: rotate(18deg) skewY(-36deg);
}
.circle-list:nth-child(5) {
  transform: rotate(54deg) skewY(-36deg);
}
li:first-child .circle-text {
	color:black;
    background: #cecece;
}
li:nth-child(2) .circle-text {
	color:black;
    background: #cecece;
}
li:nth-child(3) .circle-text {
	color:black;
    background: #cecece;
}
li:nth-child(4) .circle-text {
	color:black;
    background: #cecece;
}
li:nth-child(5) .circle-text {
	color:black;
    background: #cecece;
}
.circle-mask2{
	position:absolute;
	bottom:0;
	left:17%;
    height:66%;
    width:66%;
    text-align:center;
    margin-top:2em;
    border-radius: 200px 200px 0 0;
    -moz-border-radius: 200px 200px 0 0;
    -webkit-border-radius: 200px 200px 0 0;
    background:white;
	z-index:3;
}
.circle-mask2-text{
  padding-top:10px;
}

.cash{
  position:relative;
    left:-7%;
  width:110%;
    height: 20%;
  padding-top:3%;
  border:1px solid grey;
  border-radius:15px;
  text-align:center;
}

/* cart-item-option */
.cart-item-option{
    color:#6a84ff;
}

.cart-item-total-price{
    text-align: right;
    width:100%;
}

/* cart-item-btns */
.dashboard-cart-btns{
    position:relative;
    display: block;
    width:50%;
    border: 1px solid rgba(0, 0, 0, .5);
    left:25%;
    top:-25px;
    height:25px;
    font-size: 13px;
}

.dashboard-cart-btns-ul{
    list-style-type: none;
}
.dashboard-cart-btns-ul li{
    float:left;
}

.dashboard-cart-btns-ul li:nth-child(1) {
    margin-left:17%;
    position: relative;
    top:5px;
}

.dashboard-cart-btns-ul li:nth-child(1) input{
    width:60px;
    cursor: pointer;
}

.dashboard-cart-btns-ul li:nth-child(2) {
    margin-right:17%;
    float:right;
    position: relative;
    top:5px;
}

.dashboard-cart-btns-ul li:nth-child(2) input{
    background:none;
    cursor: pointer;
}

/* dashboard-card-total */
.dashboard-cart-subtotal #money{
    color:#648efc;
    font-weight:normal;
}

